init(frontend): add Angular 20 codebase

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,20 @@
-/* To learn more about Typescript configuration file: https://www.typescriptlang.org/docs/handbook/tsconfig-json.html. */
-/* To learn more about Angular compiler options: https://angular.dev/reference/configs/angular-compiler-options. */
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "target": "ES2022",
+    "module": "esnext",                           // ✅ FIXED: "preserve" → "esnext"
+    "moduleResolution": "node",                   // ✅ REQUIRED for Angular module resolution
+    "importHelpers": true,
+    "experimentalDecorators": true,
+    "isolatedModules": true,
     "strict": true,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "skipLibCheck": true,
-    "isolatedModules": true,
-    "experimentalDecorators": true,
-    "importHelpers": true,
-    "target": "ES2022",
-    "module": "preserve",
+    "useDefineForClassFields": false,              // ✅ RECOMMENDED by Angular
+    "allowSyntheticDefaultImports": true,
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
