--- a/angular.json
+++ b/angular.json
@@ -66,20 +66,24 @@
           "builder": "@angular/build:extract-i18n"
         },
         "test": {
-          "builder": "@angular/build:karma",
-          "options": {
-            "main": "src/test.ts",
-            "tsConfig": "tsconfig.spec.json",
-            "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
-            ],
-            "styles": [
-              "src/styles.css"
-            ]
-          }
+        "builder": "@angular-devkit/build-angular:karma",
+        "options": {
+        "main": "src/test.ts",
+        "polyfills": [],
+        "tsConfig": "tsconfig.spec.json",
+        "karmaConfig": "karma.conf.js",
+        "assets": [
+        {
+        "glob": "**/*",
+        "input": "public",
+        "output": "/"
+        }
+        ],
+        "styles": [
+        "src/styles.css"
+        ],
+        "scripts": []
+        }
         }
       }
     }
