--- a/package.json
+++ b/package.json
@@ -7,18 +7,19 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
+    "clean": "rimraf dist out-tsc node_modules package-lock.json",
     "serve:ssr:employee-management-client": "node dist/employee-management-client/server/server.mjs"
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^20.0.0",
-    "@angular/compiler": "^20.0.0",
-    "@angular/core": "^20.0.0",
-    "@angular/forms": "^20.0.0",
-    "@angular/platform-browser": "^20.0.0",
-    "@angular/platform-server": "^20.0.0",
-    "@angular/router": "^20.0.0",
-    "@angular/ssr": "^20.0.3",
+    "@angular/common": "^20.0.5",
+    "@angular/compiler": "^20.0.5",
+    "@angular/core": "^20.0.5",
+    "@angular/forms": "^20.0.5",
+    "@angular/platform-browser": "^20.0.5",
+    "@angular/platform-server": "^20.0.5",
+    "@angular/router": "^20.0.5",
+    "@angular/ssr": "^20.0.5",
     "express": "^5.1.0",
     "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
@@ -26,21 +27,23 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@angular/build": "^20.0.3",
-    "@angular/cli": "^20.0.3",
-    "@angular/compiler-cli": "^20.0.0",
-    "@angular/platform-browser-dynamic": "^20.0.4",
+    "@angular-devkit/build-angular": "^20.0.5",
+    "@angular/build": "^20.0.5",
+    "@angular/cli": "^20.0.5",
+    "@angular/compiler-cli": "^20.0.5",
+    "@angular/platform-browser-dynamic": "^20.0.5",
     "@types/express": "^5.0.1",
-    "@types/jasmine": "~5.1.0",
+    "@types/jasmine": "^5.1.8",
     "@types/jquery": "^3.5.32",
     "@types/jwt-decode": "^2.2.1",
-    "@types/node": "^20.17.19",
-    "jasmine-core": "~5.7.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
+    "@types/node": "^20.19.4",
+    "jasmine-core": "~5.1.0",
+    "karma": "^6.4.4",
+    "karma-chrome-launcher": "^3.2.0",
+    "karma-coverage": "^2.2.1",
+    "karma-jasmine": "^5.1.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
+    "rimraf": "^6.0.1",
     "typescript": "~5.8.2",
     "zone.js": "^0.15.1"
   }
