--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -1,19 +1,15 @@
-  /* To learn more about Typescript configuration file: https://www.typescriptlang.org/docs/handbook/tsconfig-json.html. */
-  /* To learn more about Angular compiler options: https://angular.dev/reference/configs/angular-compiler-options. */
-  {
-"extends": "./tsconfig.json",
-"compilerOptions": {
-"outDir": "./out-tsc/spec",
-"types": ["jasmine", "node"]
-},
-"files": [
-"src/test.ts"
-],
-"include": [
-"src/**/*.spec.ts"
-],
-"angularCompilerOptions": {
-"compilationMode": "partial",
-"enableI18nLegacyMessageIdFormat": false
-}
+{
+  "extends": "./tsconfig.json",
+  "compilerOptions": {
+    "outDir": "./out-tsc/spec",
+    "module": "esnext",
+    "moduleResolution": "node",
+    "types": ["jasmine", "node"]
+  },
+  "files": ["src/test.ts"],
+  "include": ["src/**/*.spec.ts"],
+  "angularCompilerOptions": {
+    "compilationMode": "partial",
+    "enableI18nLegacyMessageIdFormat": false
+  }
 }
